--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 ################################################################################
 
 /TaskNest/TaskNest/WeatherForecast.cs
+/.vs
+/TaskNest/.vs
+/TaskNest/.vs/TaskNest
+/TaskNest/.vs/TaskNest
+/TaskNest/.vs/TaskNest/FileContentIndex
+/TaskNest/.vs/TaskNest/FileContentIndex
+/TaskNest/.vs/TaskNest
