--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@
 /TaskNest/.vs/TaskNest/FileContentIndex
 /TaskNest/.vs/TaskNest/FileContentIndex
 /TaskNest/.vs/TaskNest
+/TaskNest/.vs/TaskNest/FileContentIndex
+/TaskNest/.vs/TaskNest
+/TaskNest/.vs
+/TaskNest/TaskNest/bin/Debug/net8.0
+/TaskNest/.vs/TaskNest/v17
+*.v2
+TaskNest/.vs/TaskNest/FileContentIndex/bfe3ce09-3072-43d5-9cb2-8b5a7701b0dd.vsidx
+TaskNest/.vs/TaskNest/DesignTimeBuild/.dtbcache.v2
