--- a/.github/workflows/main_ayurvault-backend.yml
+++ b/.github/workflows/main_ayurvault-backend.yml
@@ -7,6 +7,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -52,4 +55,5 @@ jobs:
           app-name: 'AyurVault-backend'
           slot-name: 'Production'
           package: .
+
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_852B696B3B624354A18ACFC237B45E7E }}
