--- a/.github/workflows/main_ayurvault-backend.yml
+++ b/.github/workflows/main_ayurvault-backend.yml
@@ -27,10 +27,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build TaskNest/TaskNest/TaskNest.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish TaskNest/TaskNest/TaskNest.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -57,3 +57,4 @@ jobs:
           package: .
 
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_852B696B3B624354A18ACFC237B45E7E }}
+
